# AMSPlusCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  sdkconfig  sdkconfig.old
components/ams_mqtt/: CMakeLists.txt  ams_mqtt.c  ams_mqtt.h
components/ams_ntag/: CMakeLists.txt  ams_ntag.c  ams_ntag.h
components/ath10/: aht10.c
components/custom_board/: CMakeLists.txt  qmsd_board.c  qmsd_board.h  qmsd_board_pin.h
components/easy_wifi/: CMakeLists.txt  easy_wifi.c
firmware/: CMakeLists.txt  ChangeLog.md  README.md  index.html  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  version.txt
firmware/components/ams_mqtt/: ams_mqtt.c  ams_mqtt.h
firmware/components/ams_ntag/: ams_ntag.c  ams_ntag.h
firmware/main/: CMakeLists.txt  main.c
firmware/main/gui/: events_init.c  gui_guider.c  gui_guider.h  setup_scr_screen_00.c  setup_scr_screen_21.c  setup_scr_screen_31.c  setup_scr_screen_41.c  setup_scr_screen_5.c
firmware/main/ui_resource/: _count_26x26.c  _ota_32x32.c  _wifi_50x38.c  guider_fonts.h  lv_customer_font_Teko_Regular_35.c
main/: CMakeLists.txt  ams_mqtt.c  ams_mqtt.h  ca_certificate.pem.2  gui_guider.h  main.c  setup_scr_screen.c
main/gui/: gui_guider.h  setup_scr_screen_00.c  setup_scr_screen_01.c  setup_scr_screen_11.c  setup_scr_screen_21.c  setup_scr_screen_31.c  setup_scr_screen_5.c
main/ui_resource/: _WIFI_alpha_20x20.c  _connection_alpha_18x18.c  _icon_18x17.c  _wifi_s_20x16.c  _wifi_s_33x25.c  lv_customer_font_Teko_Regular_35.c  lv_customer_font_Teko_Regular_70.c  lv_font_Teko_Regular_17.c
(+11 files in other folders)
