idf_component_register(
    SRC_DIRS . ui_resource
    INCLUDE_DIRS .

    SRCS "ui_resource/_connection_alpha_18x18.c"
    SRCS "ui_resource/_WIFI_alpha_20x20.c"
    SRCS "ui_resource/lv_customer_font_Teko_Regular_35.c"
    SRCS "ui_resource/lv_customer_font_Teko_Regular_70.c"
    SRCS "ui_resource/lv_font_Teko_Regular_17.c"

    SRCS "setup_scr_screen.c"
    SRCS "main.c"
)
