idf_component_register(
    INCLUDE_DIRS . gui ui_resource

    SRCS "ui_resource/_connection_alpha_18x18.c"
    SRCS "ui_resource/_WIFI_alpha_20x20.c"
    SRCS "ui_resource/lv_customer_font_Teko_Regular_35.c"
    SRCS "ui_resource/lv_customer_font_Teko_Regular_70.c"
    SRCS "ui_resource/lv_font_Teko_Regular_17.c"
    SRCS "ui_resource/_count_26x26.c"
    SRCS "ui_resource/_icon_18x17.c"
    SRCS "ui_resource/_ota_32x32.c"
    SRCS "ui_resource/_wifi_50x38.c"
    SRCS "ui_resource/_wifi_s_20x16.c"
    SRCS "ui_resource/_wifi_s_33x25.c"
    SRCS "ui_resource/guider_fonts.h"

    SRCS "gui/events_init.c"
    SRCS "gui/gui_guider.c"
    SRCS "gui/setup_scr_screen_00.c"
    SRCS "gui/setup_scr_screen_01.c"
    SRCS "gui/setup_scr_screen_11.c"
    SRCS "gui/setup_scr_screen_21.c"
    SRCS "gui/setup_scr_screen_31.c"
    SRCS "gui/setup_scr_screen_41.c"
    SRCS "gui/setup_scr_screen_5.c"

    SRCS "main.c"
)
